--- a/veterinaria-frontend/src/app/Componentes/citas-lista-component/citas-lista-component.component.css
+++ b/veterinaria-frontend/src/app/Componentes/citas-lista-component/citas-lista-component.component.css
@@ -1,6 +1,6 @@
 
 .table-hover tbody tr:hover {
-  background-color: rgba(0, 123, 255, 0.1); /* Efecto hover suave */
+  background-color: rgba(0, 123, 255, 0.1);
   transition: background-color 0.3s ease;
 }
 
